2007-08-03  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Makefile: let's try don't include boost's -I if macro
	not defined---mysterious behaviour otherwise happens;

	* Event.h, EvManager.cc, EvPack.cc: use TR1 type_traits technique;
	add tricks to compile without STLport;

	* EventHandler.h: remove STLport's macro.

2007-07-27  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Event.h, EvManager.cc, EvPack.cc: operator of format output
	of gaddr_type is public now and situated in the EvPack.cc,
	declared in the Event.h in namespace std.

	* libstem: library version 4.6.1

2007-07-18  Petr Ovtchenkov  <ptr@island.corbina.net>

	* test/stem: boost unit test framework replaced by exam.

2007-07-12  Petr Ovtchenkov  <ptr@island.corbina.net>

	* libstem: library version 4.6.0

2007-07-11  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.h, Cron.h: Condition replaced by condition.

2007-06-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* NetTransport.cc, EvManager.cc: replace Locker by scoped_lock.

	* EvManager.cc, _EventHandler.cc, EventHandler.h, EvManager.h, Cron.h:
	all Mutex replaced by mutex

	* EventHandler.h, _EventHandler.cc: mutexRS renamed to recursive_mutex;
	LockerRS renamed to recursive_scoped_lock; obsolete LockerSDS
	replaced by recursive_scoped_lock;

	* _EventHandler.cc: call destructor, don't free memory here;
	acquire lock (missed lock).

2007-03-12  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.h, EvManager.cc: trace-related locks, flags and
	functions moved from static to member; fix bogus bug---missed
	return in << operator for gaddr_type;

	* NetTransport.cc: directly use _trflags, due to function use
	lock now;

	* _EventHandler.cc: ::getpid call may give lame result after
	fork; use xmt::getpid;

	* libstem: library version 4.5.0

2007-02-08  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.h, EvManager.cc: use deque instead of queue;
	this allow to use container's swap, not exchange via temporary
	objects [via copy];
